--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Twitter</string>
-    <string name="login_label">Log in</string>
+    <string name="login_button_label">LOG IN TO TWITTER</string>
     <string name="intent_scheme">oauth</string>
     <string name="intent_host">cprest</string>
 
